# kratos-structured-solver-sandbox

./: .gitignore  README.md  generate_incompressible_navier_stokes_q1_p0_structured_element.py  generate_incompressible_navier_stokes_q1_p0_structured_element_stencil.py  generate_incompressible_navier_stokes_q1_p0_structured_stencil.py  incompressible_navier_stokes_q1_p0_structured_element_2d.py  mesher.py  run.py  test_circulant.py  test_circulant_1d.py
cpp/: CMakeLists.txt  configure.sh
cpp/includes/: cell_utilities.hpp  deflation_pressure_preconditioner.hpp  fft_pressure_preconditioner.hpp  incompressible_navier_stokes_q1_p0_structured_element.hpp  matrix_replacement.hpp  mdspan_utilities.hpp  mesh_utilities.hpp  operators.hpp  pressure_conjugate_gradient_solver.hpp  pressure_conjugate_gradient_solver_gpu.hpp  pressure_operator.hpp  pressure_preconditioner.hpp  pressure_preconditioner_eigen.hpp  runge_kutta_utilities.hpp  sbm_utilities.hpp  time_utilities.hpp
cpp/includes/utilities/: perf.h
cpp/sources/: cell_utilities.cpp  incompressible_navier_stokes_q1_p0_structured_element.cpp  mesh_utilities.cpp  operators.cpp  run.cpp  runge_kutta_utilities.cpp  sbm_utilities.cpp  time_utilities.cpp
cpp_output/: cpp_output_postprocess.py  pressure_matrices.py  pressure_matrices_new.py  test.py
python/: generate_incompressible_navier_stokes_q1_p0_structured_element.py  incompressible_navier_stokes_q1_p0_structured_element_2d.py  pressure_operator_stencil.py  quadrilateral_2d_4n_kinematics.py  run.py
